2007-10-25  John W. Eaton  <jwe@octave.org>

	* configure.in (AH_BOTTOM): Define OCTAVE_EMPTY_CPP_ARG here.

2007-10-24  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (maintainer-clean distclean): No need to delete
	Makefrag.f77 and Makerules.f77.
	* Makeconf.in: Include rules for making .o files from .f files
	instead of substituting @f77_rules_frag@.  
	* configure.in): Delete handling of --with-f2c and --with-f77
	options.  No need to call OCTAVE_CHECK_EXCLUSIVE_WITH_OPTIONS.
	Delete all special cases for f2c.
	* aclocal.m4 (OCTAVE_CHECK_EXCLUSIVE_WITH_OPTIONS): Delete macro.

	* FLEX.patch: Delete obsolete file.
	* octMakefile.in (DISTFILES): Remove it from the list.

	* acx_blas.m4: Use "-Wl,-framework -Wl,vecLib" instead of
	just "-framework vecLib" in test for Mac OS X test.

	* configure.in, aclocal.m4: Avoid AC_TRY_EVAL.

	* aclocal.m4 (OCTAVE_STRPTIME_BROKEN): New macro.
	* configure.in: Use it.

2007-10-23  John W. Eaton  <jwe@octave.org>

	* configure.in: When checking for -lf2c, set F2CLIBS instad of
	FLIBS, then set FLIBS to $F2CLIBS just before printing the summary.
	Check for BLAS library calling convention compatibility.

2007-10-17  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete checks for METIS.

2007-10-12  John W. Eaton  <jwe@octave.org>

	* mk-opts.pl (parse_input): Allow comment lines beginning with #.

	* Change copyright notices in all files that are part of Octave to
	GPLv3 or any later version.

	* COPYING: Update to GPLv3.

        * run-octave.in: List args explicitly in exec command.

2007-10-11  John W. Eaton  <jwe@octave.org>

	* config.guess, config.sub: Update from FSF sources.

2007-10-10  Kim Hansen  <kimhanse@gmail.com>

        * run-octave.in: Use $args.  Eliminate "if [ -n "$args" ]" conditional.

2007-10-09  John W. Eaton  <jwe@octave.org>

	* gdbinit.in: Delete.
	* octMakefile.in (DISTFILES): Remove it from the list.
	(.gdbinit): Delete rule.
	(maintainer-clean, distclean): No need to delete .gdbinit.
