@@ -1,3 +1,10 @@
+2007-10-26  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* interpreter/Makefile.in, faq/Makefile.in, liboctave/Makefile.in:
+	Use temporary renamed files instead of Don't use --output option
+	argument for texi2[dvi|pdf].  Use $(sepchar) for path element
+	separation when building TEXINPUTS.  Remove use of UNSETCOMSPEC trick.
+
 2007-10-22  Kim Hansen  <kimhanse@gmail.com>
 
 	* interpreter/munge-texi.cc: Include <cstdlib> and <cstring>.
